--- a/collection_1_sommer.ipynb
+++ b/collection_1_sommer.ipynb
@@ -23,105 +23,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'head': {'vars': ['title', 'creatorLabel', 'inception', 'inventory_number', 'made_from_materialLabel', 'image', 'copyright_statusLabel']}, 'results': {'bindings': [{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Waldnymphe. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig von Hofmann-Zeitz'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/52'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Teneriffa'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Fritz Hildebrandt'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 459'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Porträt der Freifrau Adelheid von Berlichingen'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1870-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Eduard Von Steinle'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A II 385'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Mädchenkopf. Miniatur aus der Sammlung Loewe'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1878-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Ludwig Knaus'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A III 733/67'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Bildnis einer Dame aus dem Hause Bismarck'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1840-01-01T00:00:00Z'}, 'creatorLabel': {'type': 'literal', 'value': 'http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9'}, 'inventory_number': {'type': 'literal', 'value': 'A III 458'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Im Schnee'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1884-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Carl Gustaf Hellqvist'}, 'copyright_statusLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'public domain'}, 'inventory_number': {'type': 'literal', 'value': 'A I 469'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}}]}}\n",
-      "Inventory number: A III 733/52\n",
+      "{'head': {'vars': ['title', 'creatorLabel', 'inception', 'inventory_number', 'made_from_materialLabel', 'image', 'copyright_statusLabel']}, 'results': {'bindings': [{'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Ruhende Frau'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1912-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}, 'inventory_number': {'type': 'literal', 'value': '12125'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Ruhende Frau'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1912-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}, 'inventory_number': {'type': 'literal', 'value': '12125'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Ruhende Frau'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1912-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}, 'inventory_number': {'type': 'literal', 'value': 'A II 335'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Ruhende Frau'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1912-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}, 'inventory_number': {'type': 'literal', 'value': 'A II 335'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Dorf am See'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1913-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}, 'inventory_number': {'type': 'literal', 'value': '16107'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Dorf am See'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1913-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}, 'inventory_number': {'type': 'literal', 'value': '16107'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Dorf am See'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1913-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'oil paint'}, 'inventory_number': {'type': 'literal', 'value': 'A II 302'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Dorf am See'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1913-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'made_from_materialLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'canvas'}, 'inventory_number': {'type': 'literal', 'value': 'A II 302'}}, {'title': {'xml:lang': 'de', 'type': 'literal', 'value': 'Landschaft am See'}, 'inception': {'datatype': 'http://www.w3.org/2001/XMLSchema#dateTime', 'type': 'literal', 'value': '1934-01-01T00:00:00Z'}, 'creatorLabel': {'xml:lang': 'en', 'type': 'literal', 'value': 'Karl Schmidt-Rottluff'}, 'inventory_number': {'type': 'literal', 'value': '16111'}}]}}\n",
+      "Inventory number: 12125\n",
       "\n",
-      "Title: Waldnymphe. Miniatur aus der Sammlung Loewe\n",
+      "Title: Ruhende Frau\n",
       "\n",
-      "Creator: Ludwig von Hofmann-Zeitz\n",
-      "\n",
-      "Copyright status: public domain\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A I 459\n",
+      "Inventory number: 12125\n",
       "\n",
-      "Title: Teneriffa\n",
+      "Title: Ruhende Frau\n",
       "\n",
-      "Creator: Fritz Hildebrandt\n",
-      "\n",
-      "Copyright status: public domain\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A I 459\n",
+      "Inventory number: A II 335\n",
       "\n",
-      "Title: Teneriffa\n",
+      "Title: Ruhende Frau\n",
       "\n",
-      "Creator: Fritz Hildebrandt\n",
-      "\n",
-      "Copyright status: public domain\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A II 385\n",
+      "Inventory number: A II 335\n",
       "\n",
-      "Title: Porträt der Freifrau Adelheid von Berlichingen\n",
+      "Title: Ruhende Frau\n",
       "\n",
-      "Creator: Eduard Von Steinle\n",
-      "\n",
-      "Copyright status: public domain\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A II 385\n",
+      "Inventory number: 16107\n",
       "\n",
-      "Title: Porträt der Freifrau Adelheid von Berlichingen\n",
+      "Title: Dorf am See\n",
       "\n",
-      "Creator: Eduard Von Steinle\n",
-      "\n",
-      "Copyright status: public domain\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A III 733/67\n",
+      "Inventory number: 16107\n",
       "\n",
-      "Title: Mädchenkopf. Miniatur aus der Sammlung Loewe\n",
+      "Title: Dorf am See\n",
       "\n",
-      "Creator: Ludwig Knaus\n",
-      "\n",
-      "Copyright status: public domain\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A III 458\n",
+      "Inventory number: A II 302\n",
       "\n",
-      "Title: Bildnis einer Dame aus dem Hause Bismarck\n",
+      "Title: Dorf am See\n",
       "\n",
-      "Creator: http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "Inventory number: A III 458\n",
-      "\n",
-      "Title: Bildnis einer Dame aus dem Hause Bismarck\n",
-      "\n",
-      "Creator: http://www.wikidata.org/.well-known/genid/6dd6fbf7f09990537522fbaa79e4a2b9\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
       "\n",
-      "Inventory number: A I 469\n",
+      "Inventory number: A II 302\n",
       "\n",
-      "Title: Im Schnee\n",
+      "Title: Dorf am See\n",
       "\n",
-      "Creator: Carl Gustaf Hellqvist\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
-      "Copyright status: public domain\n",
+      "\n",
+      "\n",
+      "\n",
+      "Inventory number: 16111\n",
+      "\n",
+      "Title: Landschaft am See\n",
+      "\n",
+      "Creator: Karl Schmidt-Rottluff\n",
       "\n",
       "\n",
       "\n",
@@ -229,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
