--- a/collection_1_sommer.ipynb
+++ b/collection_1_sommer.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From: https://w.wiki/6aKR"
+    "From: https://w.wiki/6aKR modified https://w.wiki/6dKb"
    ]
   },
   {
